version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/Enums/KrigingCorrFuncType.rst.txt
.. vale off



:class:`KrigingCorrFuncType`
============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.Enums.KrigingCorrFuncType(*args, **kwds)

   Bases: :py:obj:`enum.Enum`


   
   Create a collection of name/value pairs.

   Example enumeration:

   >>> class Color(Enum):
   ...     RED = 1
   ...     BLUE = 2
   ...     GREEN = 3

   Access them by:

   - attribute access:

     >>> Color.RED
     <Color.RED: 1>

   - value lookup:

     >>> Color(1)
     <Color.RED: 1>

   - name lookup:

     >>> Color['RED']
     <Color.RED: 1>

   Enumerations can be iterated over, and know how many members they have:

   >>> len(Color)
   3

   >>> list(Color)
   [<Color.RED: 1>, <Color.BLUE: 2>, <Color.GREEN: 3>]

   Methods can be added to enumerations, and members can have their own
   attributes -- see the documentation for details.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: KrigingCorrFuncType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CorrFuncCubic`
            - 
          * - :py:attr:`~CorrFuncExp`
            - 
          * - :py:attr:`~CorrFuncGauss`
            - 
          * - :py:attr:`~CorrFuncLin`
            - 
          * - :py:attr:`~CorrFuncMultiQuadratic`
            - 
          * - :py:attr:`~CorrFuncNone`
            - 
          * - :py:attr:`~CorrFuncSpherical`
            - 
          * - :py:attr:`~CorrFuncThinPlateSpine`
            - 








Attribute detail
----------------
.. py:attribute:: CorrFuncCubic
   :value: 5


.. py:attribute:: CorrFuncExp
   :value: 1


.. py:attribute:: CorrFuncGauss
   :value: 2


.. py:attribute:: CorrFuncLin
   :value: 3


.. py:attribute:: CorrFuncMultiQuadratic
   :value: 6


.. py:attribute:: CorrFuncNone
   :value: 0


.. py:attribute:: CorrFuncSpherical
   :value: 4


.. py:attribute:: CorrFuncThinPlateSpine
   :value: 7






.. vale on